# supra-merkle-airdrop

./: README.md  users.json
move/: .gitignore  Move.toml
move/sources/: airdrop.move
move/tests/: airdrop_tests.move
rust/: Cargo.toml  merkle_proof.json  merkle_root.txt
rust/src/: main.rs
rust/src/merkle_tree/: mod.rs
rust/src/tests/: mod.rs
