[package]
name = "merkle-cli"
version = "0.1.0"
edition = "2024"
authors = ["mrathod05 <mrathod05@github>"]

[dependencies]
hex = "0.4.3"
sha3 = "0.11.0-rc.3"
serde_json = "1.0.146"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = "0.3.22"
